--- a/application/admin/view/brands/index.html
+++ b/application/admin/view/brands/index.html
@@ -39,6 +39,7 @@
                         </td>
                         <td>
                             <a href="{:url('admin/Waress/index',array('brand_id' => $vo.id))}">查看商品</a>|
+                            <a href="{:url('admin/Shops/index',array('brand_id' => $vo.id))}">查看门店</a>|
                             <a href="{:url('admin/Brands/editPage',array('id' => $vo.id))}">编辑</a>|
                             <a href="{:url('admin/Brands/delete',array('id' => $vo.id))}">删除</a>
                         </td>
