--- a/application/admin/view/waress/add_page.html
+++ b/application/admin/view/waress/add_page.html
@@ -34,7 +34,7 @@
                             <input class="controls input-append date form_datetime form-control" name="time" id="time" type="text" value="{:date('Y-m-d',time())}" data-date="2018-09-01" data-date-format="yyyy mm dd" data-link-field="dtp_input1">
                         </div>
                     </div>
-                    <div class="form-group">
+                   <!-- <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="address">领取地点 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
@@ -47,7 +47,7 @@
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div data-name="map_pic" class="upload one" id="map_pic" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/addressImgUpload')}"></div>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="remark">商品图片<span class="required">*</span>
