--- a/application/admin/view/brands/index.html
+++ b/application/admin/view/brands/index.html
@@ -1,10 +1,13 @@
+
 <div class="clearfix"></div>
 <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
                 <h2>品牌列表</h2>
-                <a type="button" class="navbar-right panel_toolbox btn btn-primary" href="{:url('admin/Brands/addPage')}">添加品牌</a>
+                <a type="button" class="navbar-right panel_toolbox btn btn-primary addbrand" href="{:url('admin/Brands/addPage')}">添加品牌</a>
+                <a type="button" class="navbar-right panel_toolbox btn btn-primary" href="{:url('admin/Brands/export')}" style="margin-right: 20px">导出</a>
+
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
