--- a/application/admin/view/partners/index.html
+++ b/application/admin/view/partners/index.html
@@ -5,6 +5,7 @@
             <div class="x_title">
                 <h2>合作商列表</h2>
                 <a type="button" class="navbar-right panel_toolbox btn btn-primary" href="{:url('admin/Partners/addPage')}">添加合作商</a>
+                <a type="button" class="navbar-right panel_toolbox btn btn-primary" href="{:url('admin/Partners/export')}" style="margin-right: 20px">导出</a>
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
