--- a/application/admin/view/users/blacklist.html
+++ b/application/admin/view/users/blacklist.html
@@ -35,6 +35,14 @@
                         </select>
                     </div>
                     <div class="searchitem">
+                        <span>昵称</span>
+                        <input data-parsley-required="" type="text" class="form-control" name="nickname" id="nickname" placeholder="昵称" aria-describedby="basic-addon1" value="{$nickname}">
+                    </div>
+                    <div class="searchitem">
+                        <span>电话</span>
+                        <input data-parsley-required="" type="text" class="form-control" name="phone" id="phone" placeholder="电话" aria-describedby="basic-addon1" value="{$phone}">
+                    </div>
+                    <div class="searchitem">
                         <button type="submit" class="btn btn-default">搜索</button>
                     </div>
                 </div>
