--- a/application/admin/view/ceshi/resetpage.html
+++ b/application/admin/view/ceshi/resetpage.html
@@ -38,10 +38,18 @@
                     <tbody>
                         <tr>
                             <td>
-                                游戏用户id(会员ar游戏信息的id逗号（，）隔开)：<input class="form-control gameuserid" name="reset_user_id" id="reset_user_id" value="{$ceshiData['value']}">
+                                游戏用户id(会员ar游戏信息的id逗号（，）隔开)：<input class="form-control gameuserid" name="reset_user_id" id="reset_user_id" value="{$ceshiData[0]['value']}">
                             </td>
                             <td>
                                 <button class="btn btn-success" onclick="reset()">重置为未集齐状态</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                游戏用户id(会员ar游戏信息的id逗号（，）隔开)：<input class="form-control gameuserid" name="reset_game_user_id" id="reset_game_user_id" value="{$ceshiData[1]['value']}">
+                            </td>
+                            <td>
+                                <button class="btn btn-success" onclick="reset_game()">删除今日游戏记录（恢复游戏次数）</button>
                             </td>
                         </tr>
                     </tbody>
@@ -55,6 +63,42 @@
     function reset(){
         var user_id = $('#reset_user_id').val();
         var url = "{:url('admin/Ceshi/reset')}";
+        $.ajax({
+            type: 'POST',
+            url: url,
+            data:{user_id:user_id},
+            dataType: 'json',
+            success:function(res){
+                if(res.code == 1){
+                    $.alert({
+                        title: '系统提示',
+                        content: '设置成功！',
+                        icon: 'fa fa-comment',
+                        type: 'green',
+                    });
+                }else {
+                    $.alert({
+                        title: '系统提示',
+                        content: '设置失败请稍后再试！',
+                        icon: 'fa fa-comment',
+                        type: 'green',
+                    });
+                }
+                console.log(res);
+            },
+            error:function () {
+                $.alert({
+                    title: '系统提示',
+                    content: '网络错误，请稍后再试！',
+                    icon: 'fa fa-comment',
+                    type: 'green',
+                });
+            }
+        });
+    }
+    function reset_game(){
+        var user_id = $('#reset_game_user_id').val();
+        var url = "{:url('admin/Ceshi/resetGame')}";
         $.ajax({
             type: 'POST',
             url: url,
