--- a/application/admin/view/materials/edit_page.html
+++ b/application/admin/view/materials/edit_page.html
@@ -43,9 +43,9 @@
                                 <thead>
                                 <tr>
                                     <th>部件序号</th>
-                                    <th>扫描图片</th>
-                                    <th>部件图片</th>
-                                    <th>部件扫描成功图片</th>
+                                    <th>扫描图片(建议尺寸：220*220)</th>
+                                    <th>部件图片(建议尺寸：220*220)</th>
+                                    <th>部件扫描成功图片(建议尺寸：220*220)</th>
                                 </tr>
                                 </thead>
                                 <tbody id="imgcontent">
@@ -57,22 +57,22 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12">未完成图片<span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">未完成图片(建议尺寸：410*650)<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div data-name="uncomplete" class="upload one" id="uncomplete" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/game1ImgUpload')}"></div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12">完成图片<span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">完成图片.gif(建议尺寸：410*650)<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <div class="upload one" id="complete" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/game1ImgUpload')}"></div>
+                            <div class="upload one" id="complete" data-num="1" data-type="png,jpg,gif" action="{:url('api/Publicapi/game1ImgUpload')}"></div>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12">合成动画（.gif）<span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">合成动画.gif(建议尺寸：410*650)<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div data-name="completeing" class="upload one" id="completeing" data-num="1" data-type="png,jpg,gif" action="{:url('api/Publicapi/game1ImgUpload')}"></div>
