--- a/application/admin/view/users/showdata.html
+++ b/application/admin/view/users/showdata.html
@@ -93,7 +93,7 @@
                         </td>
                         <td>
                             分享/索要部件:{:$vo['part_num']==''?'':'部件'.$vo['part_num']}<br/>
-                            分享类型:{:$vo['type'] == 1?'分享部件分享':$vo['type']==2?'索要部件分享':'普通分享'}<br/>
+                            分享类型:{:$vo['type'] == 1?'赠送部件分享':($vo['type']==2?'索要部件分享':'普通分享')}<br/>
                             分享状态:{:$vo['type']!=0?($vo['status']==0?'分享之后未接受':'被分享人已接受'):''}<br/>
                         </td>
                         <td>{$vo['create_time']}</td>
