--- a/application/admin/view/materials/edit_page.html
+++ b/application/admin/view/materials/edit_page.html
@@ -60,7 +60,7 @@
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">未完成图片.png(建议尺寸：410*650)<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <div data-name="uncomplete" class="upload one" id="uncomplete" data-num="1" data-type="png,jpg" action="{:url('api/Publicapi/game1ImgUpload')}"></div>
+                            <div data-name="uncomplete" class="upload one" id="uncomplete" data-num="1" data-type="png,jpg,gif" action="{:url('api/Publicapi/game1ImgUpload')}"></div>
                         </div>
                     </div>
                     <div class="form-group">
